syntax = "proto3";

option csharp_namespace = "ServicePlayground.GrpcService";

package item;

service Items {
  rpc GetItems(GetItemsRequest) returns (GetItemsResponse);
}

message GetItemsRequest {
} 

message GetItemsResponse {
  repeated Item items = 1;
}

message Item {
  string id = 1;
  string name = 2;
  DecimalValue price = 3; 
}

message DecimalValue {
  // Whole units part of the amount
  int64 units = 1;
  sfixed32 nanos = 2;
} 